force-app/main/default/objects/County__c/fields/Appellate_District__c.field-meta.xml
<CustomField>
    <fullName>Appellate_District__c</fullName>
    <label>Appellate District</label>
    <length>10</length>
    <type>Text</type>
</CustomField>