force-app/main/default/objects/County__c/fields/County_External_ID__c.field-meta.xml
<CustomField>
    <fullName>County_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>County External ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>