force-app/main/default/objects/County__c/fields/Only_Claim_Value__c.field-meta.xml
<CustomField>
    <fullName>Only_Claim_Value__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Only Claim Value</label>
    <type>Checkbox</type>
</CustomField>