force-app/main/default/objects/County__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>County_External_ID__c</columns>
    <columns>NAME</columns>
    <columns>Region__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Appellate_District__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>